--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
 body {
-    background: #000;
+  background: #000;
+  color: #fff;
+  font-family: monospace;
 }
 
 #display {
-    border: 1px solid #333;
+  border: 1px solid #333;
+}
+
+#vram-wrapper {
+  border: 1px solid #333;
+  padding: 10px;
 }
