--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,33 @@ body {
   overflow: hidden;
   margin: 0;
   padding: 0;
+  font-size: large;
 }
 ::selection {
   color: white;
   background: #333;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #333 #000000;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #000000;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #333;
+  /* border-radius: 4px; */
+  border: 4px solid #333;
 }
 
 .rom {
@@ -59,20 +82,23 @@ body {
 
 /* VMEM, MEM */
 .vmem,
-.mem {
+.mem,
+.disass {
   border-bottom: 1px solid #333;
   overflow-y: scroll;
 }
 .vmem > pre,
 .mem > pre,
-.reg > pre {
+.reg > pre,
+.disass > pre {
   padding: 0;
   margin: 0;
   color: #999;
 }
 .vmem > .top,
 .mem > .top,
-.reg > .top {
+.reg > .top,
+.disass > .top {
   margin: 10px;
 }
 
